# boogu-image-mlx

./: .gitignore  README.md  pyproject.toml
boogu_image_mlx/: pipeline_mlx.py  scheduler.py
boogu_image_mlx/models/: transformer.py  vae.py
boogu_image_mlx/utils/: weights.py
tests/parity/: make_conditioning_golden.py  make_edit_conditioning_golden.py  test_conditioning_mlx_parity.py  test_dit_edit_parity.py  test_dit_int4.py  test_dit_parity.py  test_dit_smoke.py  test_edit_conditioning_mlx.py  test_scheduler_parity.py  test_vae_parity.py
tests/smoke/: generate_e2e.py
